[package]
name = "pdx"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "3.8"
bincode = "1.3"

# PDF manipulation
lopdf = "0.26"
pdf = "0.7"
quick-xml = "0.31"
weezl = "0.1"

# Cryptography and hashing
ring = "0.17.5"
sha2 = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
rc4 = "0.1"
md5 = "0.7"
blake2 = "0.10"
blake3 = "1.5"
aes = "0.8"
cipher = { version = "0.4", features = ["block-padding"] }
block-modes = "0.9"
generic-array = "0.14"
openssl = "0.10"

# Regular expressions
regex = "1.9"

# Parallel computations
rayon = "1.7"

# Utilities
async-trait = "0.1"
thiserror = "1.0"
num_cpus = "1.16"
lazy_static = "1.4"
bitflags = "2.5"
hex = "0.4"
parking_lot = "0.12"
dashmap = "5.5"
filetime = "0.2"
memmap2 = "0.9"

# CLI and argument parsing
clap = "4.5"

# Base64 encoding/decoding
base64 = "0.22"

# Compression
flate2 = "1.0"

# Futures
futures = "0.3"

# Random number generation
rand = "0.8"

# Redis for messaging (optional)
# redis = "0.23"

# URL encoding
urlencoding = "2.1"

# Date and time handling
chrono = "0.4"

# Core utilities only
uuid = { version = "1.0", features = ["v4"] }

# Testing
tokio-test = "0.4"

[dev-dependencies]
mockito = "0.31"